<resources>
    <string name="app_name">CareScheduling</string>
    <string name="email">yourname@gmail.com</string>
    <string name="password">password</string>
    <string name="log_on">Log On</string>
    <string name="forgot_password">forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="log_on_offline">Log on offline</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Username: </string>
    <string name="_continue">Continue</string>
    <string name="f_second_text">Your user is registered with more than one customer, \n Please choose the customer to login with!</string>
    <string name="post_code">Post code:</string>
    <string name="address_finder">Address finder</string>
    <string name="house_number">House \n number</string>
    <string name="house_name">House name:</string>
    <string name="street_name">Street name:</string>
    <string name="town">Town:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="user_profile">User Profile</string>
    <string name="telephone">Telephone:</string>
    <string name="_email">Email:</string>
    <string name="mobile">Mobile:</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="_username">User name:</string>
    <string name="change_my_password">Change my password</string>
    <string name="password_question">Password question:</string>
    <string name="_password_question">Enter password question</string>
    <string name="password_answer">Password question answer:</string>
    <string name="_password_answer">Enter password answer</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <string name="edit_my_profile_info">Edit My Profile Info</string>
    <string name="edit_my_address">Edit  My Addressess</string>
    <string name="edit_my_picture">Edit My Picture</string>
    <string name="edit_my_user">Edit my user</string>
    <string name="add_new_info">To add new info like address or telephone, you need to log in to your internet application</string>
    <string name="first_name">First name:</string>
    <string name="middle_name">Middle name:</string>
    <string name="last_name">Last name:</string>
    <string name="surname">Surname:</string>
    <string name="maiden_name">Maiden name:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="gender">Gender:</string>
    <string name="prefix">Prefix:</string>
    <string name="language">Language:</string>
    <string name="maritial_status">Maritial status:</string>
    <string name="ethnicity">Ethnicity:</string>
    <string name="disabilty">Disability:</string>
    <string name="religion">Religion:</string>
    <string name="sexuality">Sexuality:</string>
    <string name="nationality">Nationality:</string>
    <string name="private_address">Private address</string>
    <string name="work_address">Work address</string>
    <string name="edit_my_address_underline"><u>Edit address</u></string>
    <string name="add_my_address_underline"><u>Add address</u></string>
    <string name="edit_my_phone_number_underline"><u>Edit phone number</u></string>
    <string name="add_my_phone_number_underline"><u>Add phone number</u></string>
    <string name="edit_my_email_underline"><u>Edit email address</u></string>
    <string name="add_my_email_underline"><u>Add email address</u></string>
    <string name="update_my_address_underline"><u>Update address</u></string>
    <string name="update_my_phone_number_underline"><u>Update phone number</u></string>
    <string name="update_my_email_underline"><u>Update email address</u></string>
    <string name="delete_my_address_underline"><u>Delete address</u></string>
    <string name="delete_my_phone_number_underline"><u>Delete phone number</u></string>
    <string name="delete_my_email_underline"><u>Delete email address</u></string>
    <string name="private_email">Private email</string>
    <string name="work_email">Work email</string>
    <string name="private_landline">Private landline</string>
    <string name="work_phone">Work phone</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="edit_email">Email</string>
    <string name="edit_phone_number">Phone Number</string>
    <string name="private_email_address">Private email address:</string>
    <string name="set_as_my_default_email">Set as my default email</string>
    <string name="set_as_my_default_phone">Set as my default phone</string>
    <string name="mobile_telephone_number">Mobile telephone number:</string>
    <string name="country_code">Country code:</string>
    <string name="profile_list">User Images</string>
    <string name="user_image">User Image</string>
    <string name="new_picture_using_camera">New Picture Using Camera</string>
    <string name="select_from_my_photos">Select From My Photos</string>
    <string name="change_password">Change Password</string>
    <string name="change_my_password_underline"><u>Change my password</u></string>
    <string name="password_question_answer">Password question answer:</string>
    <string name="get_from_media">Picture from media</string>
    <string name="no_data_available">No data found</string>
    <string name="take_picture_from_gallery">Take picture from gallery</string>
    <string name="take_picture_from_camera">Take picture from camera</string>
    <string name="my_next_visit">My Next Visit</string>
    <string name="time">Time:</string>
    <string name="running_late">Running late?</string>
    <string name="your_next_upcomming_visit_up_to">Your next upcomming visit up to</string>
    <string name="address">Address:</string>
    <string name="more_info_client">More Info Client</string>
    <string name="todays_client_task">Todays Client Task</string>
    <string name="barcode">Barcode</string>
    <string name="read_nfc">Read Nfc</string>
    <string name="need_direction">Need Directions?</string>
    <string name="directions">Directions</string>
    <string name="hours_and_expenses">Hours And Exspenses</string>
    <string name="todays_visit">Todays Visit</string>
    <string name="my_time">My Time</string>
    <string name="please_select_date">Please select date!</string>
    <string name="phone_type">Phone Type</string>
    <string name="do_not_call">Do Not Call</string>
    <string name="check_user_name">Check User Name</string>
    <string name="address_type">Address Type</string>
    <string name="email_type">Email Type</string>
    <string name="contacts">Contacts</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="mr_john_simth">Mr. John Smith \n 50 Home avenue</string>
    <string name="brigton">Brigton:</string>
    <string name="call">Call</string>
    <string name="send_email">Send Email</string>
    <string name="open">Open</string>
    <string name="Documents">documents</string>
    <string name="medication">Medication</string>
    <string name="contact_info">Contact Info</string>

    <string name="task"><u>Task</u></string>
    <string name="disabilities">Disabilities</string>
    <string name="blindness">Blindness</string>
    <string name="more_info"><u>More Info</u></string>
    <string name="registerred">Registerred :</string>
    <string name="matching">Matching</string>
    <string name="matching_type">Matching Type</string>
    <string name="notes">Note</string>
    <string name="wriiten_by">Wriiten By:</string>
    <string name="personal_details">Personal Details</string>
    <string name="summary">Summary</string>
    <string name="last_note">Last Note</string>
    <string name="client_notes">Client Notes</string>
    <string name="history">History</string>
    <string name="edit_my_user_caps">Edit My User</string>
    <string name="set_as_default">Set as default</string>
    <string name="phone_number">Phone Number</string>
    <string name="booking_date">Booking Date:</string>
    <string name="edit_your_image">Edit Your Image</string>
    <string name="delete">Delete</string>
    <string name="make_default">Make Default</string>
    <string name="this_barcode_belongs_to">This barcode belongs to :</string>
    <string name="registerred_time_and_date_is">Registerred time and date is :</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="please_choose_arrival_type">Please choose arrival type</string>
    <string name="visit_arrival">Visit Arrival</string>
    <string name="date">Date</string>
    <string name="time_without_colon">Time</string>
    <string name="visit_departure">Visit Departure</string>
    <string name="info_client">Client Info</string>
    <string name="my_task">My Task</string>
    <string name="success">Success</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="done">Done</string>
    <string name="is_disability">Is Disability</string>
    <string name="coming_soon">Coming Soon</string>

    <string-array name="home_array">
        <item>My Next Visit</item>
        <!--<item>Directions</item>-->
        <item>Todays Visits</item>
        <item>Visit Archive</item>
        <!--<item>My Time</item>
        <item>Hours and Exspenses</item>-->
    </string-array>
    <string-array name="directions_array">
        <item>For My Next Visit</item>
        <item>To Post Code</item>
        <item>To Person</item>
    </string-array>
    <string-array name="todays_visit_array">
        <item>My Next Visit</item>
        <item>Directions</item>
        <item>Todays Visits</item>
    </string-array>
    <string-array name="hours_and_exspenses_array">
        <item>This Week</item>
        <item>Last Week</item>
        <item>My Payrolls</item>
        <item>My Expenses</item>
        <item>Register new Expenses</item>
    </string-array>
    <string-array name="my_time_array">
        <item>This Rota</item>
        <item>Last Availability</item>
        <item>Holidays Request</item>
    </string-array>

    <string-array name="client_info_home_array">
        <item>Summary</item>
        <item>Personal Details</item>
        <item>Client Notes</item>
        <item>Client Contacts</item>
        <item>Client Documents</item>
        <item>Medical History</item>
        <item>Disabilites</item>
        <item>Care plan schedule</item>
    </string-array>
</resources>
