<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginBeanData"
            type="com.example.carescheduling.Ui.LoginActivity.beans.LoginBeanData" />

        <variable
            name="loginPresenter"
            type="com.example.carescheduling.Ui.LoginActivity.presenter.LoginPresenter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp"
            android:hint="@string/email"
            android:text="@{loginBeanData.userEmail}" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/password"
            android:text="@{loginBeanData.userPassword}" />

        <Button
            android:id="@+id/btn_log_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_password"
            android:layout_marginTop="@dimen/fifty_dp"
            android:onClick="@{(v)-> loginPresenter.getUserData()}"
            android:text="@string/log_on" />

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_log_on"
            android:layout_marginTop="@dimen/ten_dp"

            android:text="@string/forgot_password" />

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_forgot_password"
            android:text="@string/remember_me" />

        <CheckBox
            android:id="@+id/cb_log_on_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cb_remember_me"
            android:text="@string/log_on_offline" />
    </RelativeLayout>
</layout>