<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginBeanData"
            type="com.example.carescheduling.Ui.LoginActivity.beans.LoginBeanData" />
        <variable
            name="loginClickHandler"
            type="com.example.carescheduling.Ui.LoginActivity.View.LoginActivity.LoginClickHandler"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_email"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_width="match_parent"
            android:text="@{loginBeanData.userEmail}"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btn_log_on"
            android:layout_below="@+id/edt_password"
            android:text="@string/log_on"
            android:onClick="@{(v) -> loginClickHandler.getUsersDetail()}"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_below="@+id/btn_log_on"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:onClick="@{(v) -> loginClickHandler.forgotPasswordClick()}"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:text="@string/remember_me"
            android:layout_below="@+id/btn_forgot_password"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_below="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:id="@+id/cb_log_on_offline"
            android:text="@string/log_on_offline"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</layout>