<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/twenty_dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blindness"
        android:textColor="@color/black"
        android:textSize="@dimen/eighteen_sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerred"
            android:textColor="@color/grey"
            android:textSize="@dimen/sixteen_sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/five_dp"
            android:text="21/10/19"
            android:textColor="@color/grey"
            android:textSize="@dimen/forteen_sp" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_info"
        android:textColor="@color/blue"
        android:textSize="@dimen/sixteen_sp" />
</LinearLayout>
