<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="commonData"
            type="css.mobile.carescheduling.Ui.Common.CommonBean" />

        <variable
            name="iImageClick"
            type="css.mobile.carescheduling.Ui.Profile.presenter.IImageClick" />

        <variable
            name="commonClick"
            type="css.mobile.carescheduling.Ui.Common.Common" />

        <variable
            name="imageUrl"
            type="android.graphics.Bitmap" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/rl_tool"
            layout="@layout/toolbar_layout"
            bind:commonClick="@{commonClick}"
            bind:commonData="@{commonData}" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/one_fifty_dp"
            android:layout_height="@dimen/one_fifty_dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:contentDescription="@string/user_image"
            android:id="@+id/img_logo_profile"
            android:onClick="@{(v)->iImageClick.editImage()}"
            android:src="@drawable/user_placeholder" />


        <CheckBox
            android:id="@+id/rb_is_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:fontFamily="@font/rubik_light"
            android:paddingStart="@dimen/sixty_five_dp"
            android:text="@string/set_as_default" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:background="@drawable/radius_dark_blue_bg"
            android:fontFamily="@font/rubik_medium"
            android:onClick="@{(v)->iImageClick.cameraClick()}"
            android:text="@string/new_picture_using_camera"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:background="@drawable/radius_dark_blue_bg"
            android:fontFamily="@font/rubik_medium"
            android:onClick="@{(v)->iImageClick.openGalleryClick()}"
            android:text="@string/select_from_my_photos"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>