<?xml version="1.0" encoding="utf-8"?>
<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userEmail"
            type="String" />
<variable
    name="arrayList"
    type="com.example.carescheduling.Ui.LoginActivity.beans.LoginBeanRetro.BranchList"/>
        <variable
            name="loginFSecondPresenter"
            type="com.example.carescheduling.Ui.LoginActivity.presenter.LoginFSecondPresenter" />
    </data>-->

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Ui.LoginActivity.View.LoginFSecond">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp"
                android:text="@string/user_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten_dp"
                android:id="@+id/txt_email"
                android:padding="@dimen/five_dp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:padding="@dimen/five_dp"
            android:text="@string/f_second_text" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:id="@+id/spinner_login_sf"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp"
           android:id="@+id/btn_continue"
            android:text="@string/_continue"
            android:textAllCaps="false" />

    </LinearLayout>
<!--</layout>-->